memory: trying to fix missing  rotation / flipping the cards on mobile chrome browser

--- a/styles/components/Memory.module.scss
+++ b/styles/components/Memory.module.scss
@@ -186,11 +186,13 @@
 .closed {
   transform-style: preserve-3d;
   transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
 }
 
 .open {
   transform-style: preserve-3d;
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 .card {
